[package]
name = "invisible_backend"
version = "0.0.1"
edition = "2021"


[[bin]]
name = "server"
path = "src/server/server.rs"

# [[bin]]
# name = "client"
# path = "src/server/client.rs"


[lib]
name = "invisible_backend"
crate-type = ["cdylib", "rlib"]


[dependencies]
primitive-types = "0.12.0"
num-bigint = { version = "0.4.3" } 
rustc-serialize = "0.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
hex-literal = "0.4.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
phf = { version = "0.11", features = ["macros"] }
bit-array = "0.4.4"
typenum = "1.15.0"
futures = "0.3"
firestore-db-and-auth = "0.6.1"
tonic = "0.9.2"
prost = "0.11.0"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tokio-tcp = "0.1.4"
tokio-timer = "0.2.13"
tokio-tungstenite = "0.19.0"
url = "2.3.1"
crossbeam = "0.8.2"
log = "0.4.17"
env_logger = "0.10.0"
error-stack = "0.3.0"
parking_lot = "0.12.1"
rayon = "1.6.0"
bincode = { url = "https://github.com/bincode-org/bincode.git" }
sled = "0.34.7"
async-recursion = "1.0.2"
starknet =  { path= "crates/starknet-rs" }
reqwest = "0.11.17"
jsonwebtoken = "8.3.0"



[build-dependencies]
tonic-build = "0.9.2"
